--- a/ptt.yml
+++ b/ptt.yml
@@ -1,68 +1,145 @@
 name: ptt
 channels:
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - blas=1.0
-  - blosc=1.20.1
-  - bottleneck=1.3.2
-  - bzip2=1.0.8
-  - c-ares=1.18.1
-  - ca-certificates=2020.10.14
-  - cached-property=1.5.2
-  - cached_property=1.5.2
-  - cycler=0.11.0
-  - cython=0.29.28
-  - freetype=2.10.4
-  - h5py=2.10.0
-  - hdf5=1.10.4
-  - icu=67.1
-  - kiwisolver=1.3.2
-  - krb5=1.19.2
-  - ld_impl_linux-64=2.36.1
-  - libcurl=7.81.0
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libffi=3.4.2
-  - libnghttp2=1.46.0
-  - libopenblas=0.3.10
-  - libpng=1.6.37
-  - libssh2=1.10.0
-  - libzlib=1.2.11
-  - lz4-c=1.9.2
-  - lzo=2.10
-  - matplotlib=3.2.2
-  - matplotlib-base=3.2.2
-  - mock=4.0.2
-  - ncurses=6.3
-  - numexpr=2.8.1
-  - numpy=1.21.2
-  - numpy-base=1.21.2
-  - obspy=1.2.2=py38h6c62de6_2
-  - openssl=3.0.0
-  - packaging=21.3
-  - pandas=1.4.1
-  - pexpect=4.8.0
-  - pip=22.0.3
-  - ptyprocess=0.6.0
-  - pyparsing=3.0.4
-  - pytables=3.6.1
-  - python=3.8.12
-  - python-dateutil=2.8.2
-  - python_abi=3.8
-  - pytz=2021.3
-  - readline=8.1
-  - scipy=1.5.2
-  - setuptools=60.9.3
-  - six=1.16.0
-  - sqlite=3.37.0
-  - tk=8.6.12
-  - tornado=6.1
-  - wheel=0.37.1
-  - xz=5.2.5
-  - zlib=1.2.11
-  - zstd=1.4.5
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=4.5=1_gnu
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - blas=1.0=mkl
+  - brotli=1.0.9=he6710b0_2
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py39h06a4308_2
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.5.1=py39h295c915_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - expat=2.4.1=h2531618_2
+  - fontconfig=2.13.1=h6c09931_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.11.0=h70c0345_0
+  - giflib=5.2.1=h7b6447c_0
+  - glib=2.69.1=h5202010_0
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - icu=58.2=he6710b0_3
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - ipykernel=6.8.0=py39hef51801_0
+  - ipython=7.31.1=py39hf3d152e_0
+  - jedi=0.18.1=py39hf3d152e_0
+  - jpeg=9d=h7f8727e_0
+  - jupyter_client=7.1.2=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py39hf3d152e_1
+  - kiwisolver=1.3.1=py39h2531618_0
+  - lcms2=2.12=h3be6417_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgomp=9.3.0=h5101ec6_17
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libtiff=4.2.0=h85742a9_0
+  - libuuid=1.0.3=h7f8727e_2
+  - libwebp=1.2.0=h89dd481_0
+  - libwebp-base=1.2.0=h27cfd23_0
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.12=h03d6c58_0
+  - lz4-c=1.9.3=h295c915_1
+  - matplotlib=3.5.0=py39h06a4308_0
+  - matplotlib-base=3.5.0=py39h3ed280b_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py39h7f8727e_0
+  - mkl_fft=1.3.1=py39hd3c417c_0
+  - mkl_random=1.2.2=py39h51133e4_0
+  - munkres=1.1.4=py_0
+  - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - olefile=0.46=pyhd3eb1b0_0
+  - openssl=1.1.1m=h7f8727e_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.4.0=py39h5aabda8_0
+  - pip=21.2.4=py39h06a4308_0
+  - prompt-toolkit=3.0.26=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pyqt=5.9.2=py39h2531618_6
+  - python=3.9.7=h12debd9_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.9=2_cp39
+  - pyzmq=19.0.2=py39hb69f2a1_2
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.1.2=h7f8727e_1
+  - setuptools=58.0.4=py39h06a4308_0
+  - sip=4.19.13=py39h2531618_0
+  - six=1.16.0=pyhd3eb1b0_0
+  - sqlite=3.37.0=hc218d9a_0
+  - tk=8.6.11=h1ccaba5_0
+  - tornado=6.1=py39h27cfd23_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - tzdata=2021e=hda174b7_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.4=h9c3ff4c_0
+  - zlib=1.2.11=h7f8727e_4
+  - zstd=1.4.9=haebb681_0
   - pip:
-prefix: /home/emmanuel/anaconda3/envs/pykonal
+    - absl-py==1.0.0
+    - astunparse==1.6.3
+    - cachetools==4.2.4
+    - charset-normalizer==2.0.10
+    - cython==0.29.27
+    - flatbuffers==2.0
+    - future==0.18.2
+    - gast==0.4.0
+    - google-auth==2.3.3
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - greenlet==1.1.2
+    - grpcio==1.43.0
+    - h5py==3.6.0
+    - idna==3.3
+    - importlib-metadata==4.10.0
+    - joblib==1.1.0
+    - keras==2.7.0
+    - keras-preprocessing==1.1.2
+    - libclang==12.0.0
+    - lxml==4.7.1
+    - markdown==3.3.6
+    - networkx==2.6.3
+    - numexpr==2.8.1
+    - numpy==1.19.5
+    - oauthlib==3.1.1
+    - obspy==1.2.2
+    - opt-einsum==3.3.0
+    - pandas==1.3.5
+    - protobuf==3.19.3
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pygsp==0.5.1
+    - pytz==2021.3
+    - requests==2.27.1
+    - requests-oauthlib==1.3.0
+    - rsa==4.8
+    - scipy==1.7.3
+    - sqlalchemy==1.4.31
+    - tables==3.7.0
+    - termcolor==1.1.0
+    - threadpoolctl==3.0.0
+    - tqdm==4.62.3
+    - typing-extensions==4.0.1
+    - urllib3==1.26.8
+    - werkzeug==2.0.2
+    - wrapt==1.13.3
+    - zipp==3.7.0
+prefix: /home/emmanuel/anaconda3/envs/ptt
